--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "deploy": "wrangler deploy --minify",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "make:migration": "ts-node scripts/makeMigration.ts",
-    "migrate": "ts-node scripts/migrate.ts"
+    "migrate": "ts-node scripts/migrate.ts",
+    "migrate:deploy": "ts-node scripts/migrate-deploy.ts"
   },
   "dependencies": {
     "hono": "^4.8.2"
