feat: implement adopt feature

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -14,7 +14,9 @@
   //   "nodejs_compat"
   // ],
   "vars": {
-    "JWT_SECRET": "your-dev-secret-here"
+    "JWT_SECRET": "your-dev-secret-here",
+    "PETFINDER_CLIENT_ID": "aTJFodsQv58qhUDWcSyPYWb2J2amFXQkv1Gg0at4LAhwBIw00K",
+    "PETFINDER_CLIENT_SECRET": "DFY6HvdO3idk2G8iajwrvZ9eMErrZpva3RZvj5Mp"
   },
   // "kv_namespaces": [
   //   {
@@ -35,6 +37,21 @@
       "database_id": "80187589-0ef5-4212-b710-7c999f59b29f"
     }
   ],
+  "queues": {
+    "producers": [
+      {
+        "queue": "ADOPTION_QUEUE",
+        "binding": "adoption-queue",
+      }
+    ],
+    "consumers": [
+      {
+        "queue": "adoption-queue",
+        // "max_batch_size": 10,
+        // "max_batch_timeout": 5
+      }
+    ]
+  }
   // "ai": {
   //   "binding": "AI"
   // },
