--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "migrate:deploy": "ts-node scripts/migrate-deploy.ts"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "hono": "^4.8.2"
   },
   "devDependencies": {
